# agentic-rag-test-scope-analysis

./: .env.example  .gitignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  DISCLAIMER.md  IMPLEMENTATION_STATUS.md  LICENSE  NEXT_STEPS.md  PRE_PUBLICATION_CHECKLIST.md  README.md  SECURITY.md  evaluation_results.json  plan.md  prd.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  research_question.md
.github/workflows/: code-quality.yml
data/examples/: tgf_sample.csv
docs/: AGENTIC_EVALUATION_PLAN.md  Agentic_RAG___Knowledge_Graphs_for_Test_Scope_Analysis.txt  DOCLING.md  EVALUATION_IMPLEMENTATION_PLAN.md  EVALUATION_STATUS.md  EmbeddingModels.md  Interrupts.md  TGF_INTEGRATION.md  loader_plan.md
src/agrag/cli/: __init__.py  commands.py  display.py  hitl.py  interactive.py  main.py  thinking.py
src/agrag/config/: __init__.py  logging_config.py  settings.py
src/agrag/core/: __init__.py  checkpointing.py  graph.py  nodes.py  state.py
src/agrag/data/: dual_storage_writer.py  ingestion.py
src/agrag/evaluation/: __init__.py  agentic_evaluator.py  entity_extractor.py  metrics.py  tool_tracker.py
src/agrag/kg/: __init__.py  ontology.py
src/agrag/middleware/: __init__.py  pii.py
src/agrag/models/: __init__.py  embeddings.py  llm.py
src/agrag/storage/: __init__.py  bm25_retriever.py  neo4j_client.py  postgres_client.py
src/agrag/tools/: __init__.py  graph_traverse.py  hybrid_search.py  keyword_search.py  schemas.py  vector_search.py
tests/: test_tgf_loader.py  validate_tgf_csv.py
(+11 files in other folders)
